--- a/404.html
+++ b/404.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<!doctype html>
+<html lang="es">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>404 — Not Found</title>
+		<meta name="theme-color" content="#0b0b0f" />
+		<link rel="stylesheet" href="./assets/css/index.css" />
+	</head>
+	<body>
+		<main class="section" aria-label="Página no encontrada">
+			<div class="container">
+				<p class="kicker">error 404</p>
+				<h1 class="hero__title">This frame is missing.</h1>
+				<p class="hero__lead">La página no existe o fue movida. Vuelve al inicio.</p>
+				<a class="btn" href="./index.html#home">Ir a Home</a>
+			</div>
+		</main>
+	</body>
 </html>
